# Armkidd

./: .gitignore  README.md  docker-compose.yaml
armkidd_hub/: FileWatcher.py  agentConnector.py  agentNode.py  app.py  inputClient.py  inputClientFactory.py  ipAddrConfig.py  loadConfig.py
armkidd_hub/agent_client/: AgentClient.py  AgentServiceStream_pb2_grpc.py
armkidd_hub/ros2_ws/: frames_2026-03-13_08.44.35.gv
armkidd_hub/ros2_ws/src/armkidd_bringup/: CMakeLists.txt  package.xml
armkidd_hub/ros2_ws/src/armkidd_bringup/launch/: armkidd_real.launch.py  armkidd_sim.launch.py
armkidd_hub/ros2_ws/src/armkidd_command/: CMakeLists.txt  package.xml
armkidd_hub/ros2_ws/src/armkidd_command/behavior_trees/: arm_tree.xml
armkidd_hub/ros2_ws/src/armkidd_command/inc/: arm_control.hpp  gripper_control.hpp  serial_transfer.h  transmit_modal.h
armkidd_hub/ros2_ws/src/armkidd_command/inc/armkidd_command/: TF_helper.hpp  arm_moveit_handler.hpp  config_loader.hpp  gripper_moveit_handler.hpp
armkidd_hub/ros2_ws/src/armkidd_command/inc/armkidd_command/bt_nodes/: BackToDefault.hpp  CloseGripper.hpp  GoToTarget.hpp  PlaceDown.hpp  Retreive.hpp  WaitForCommand.hpp
armkidd_hub/ros2_ws/src/armkidd_command/src/: arm_coord_mover.cpp  bt_coord_mover.cpp  nuwacam_scaler.cpp  pcl_obstacles.cpp
armkidd_hub/ros2_ws/src/armkidd_controller/: CMakeLists.txt  armkidd_controller.xml  package.xml
armkidd_hub/ros2_ws/src/armkidd_controller/config/: armkidd_controllers.yaml
armkidd_hub/ros2_ws/src/armkidd_controller/include/armkidd_controller/: arm_control.hpp  armkidd_interface.hpp  serial_transfer.h  transmit_modal.h  utils.h
armkidd_hub/ros2_ws/src/armkidd_controller/launch/: controller.launch.py
armkidd_hub/ros2_ws/src/armkidd_controller/src/: armkidd_interface.cpp
armkidd_hub/ros2_ws/src/armkidd_description/: CMakeLists.txt  package.xml
armkidd_hub/ros2_ws/src/armkidd_description/launch/: display.launch.py  gazebo.launch.py
armkidd_hub/ros2_ws/src/armkidd_description/meshes/: ARM_ArmHand.stl  ARM_Base.stl  ARM_Base_Servo1.stl  ARM_Base_Servo2.stl  ARM_Elbow_Servo.stl  ARM_Gripper1.stl  ARM_Gripper2.stl  ARM_LowerArm.stl  ARM_UpperArm.stl  ARM_WristExtend.stl  ARM_WristExtend_Old.stl  ARM_WristExtend_Old2.stl  ARM_WristX_Servo.stl  ARM_Wrist_Servo.stl  Bottle.stl
armkidd_hub/ros2_ws/src/armkidd_description/rviz/: display.rviz
armkidd_hub/ros2_ws/src/armkidd_description/urdf/: armkidd.urdf.xacro  armkidd_cam.urdf.xacro  armkidd_control.xacro  armkidd_gazebo.xacro
armkidd_hub/ros2_ws/src/armkidd_description/worlds/: default.sdf
armkidd_hub/ros2_ws/src/armkidd_interfaces/: CMakeLists.txt
armkidd_hub/ros2_ws/src/armkidd_interfaces/msg/: WorldTarget.msg
armkidd_hub/ros2_ws/src/armkidd_moveit/: CMakeLists.txt  package.xml
armkidd_hub/ros2_ws/src/armkidd_moveit/config/: armkidd.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz
armkidd_hub/ros2_ws/src/armkidd_moveit/launch/: moveit.launch.py
armkidd_hub/ros2_ws/src/log/: latest_list
armkidd_hub/stt_client/: STTClient.py  STTServiceStream_pb2.py  STTServiceStream_pb2_grpc.py
armkidd_hub/webChat_client/: WebChatClient.py  WebChatService.proto  WebChatService_pb2.py
armkidd_hub/webImage_client/: WebImageClient.py
computer_viz/: Dockerfile
computer_viz/ros2_ws/install/: local_setup.sh  setup.sh
computer_viz/ros2_ws/install/armkidd_cvprocesser/lib/armkidd_cvprocesser/: AgentServiceStream.proto  ImageServiceStream_pb2.py  cv_processer_node copy.py
computer_viz/ros2_ws/install/armkidd_cvprocesser/share/armkidd_cvprocesser/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
computer_viz/ros2_ws/install/armkidd_cvprocesser/share/armkidd_cvprocesser/cmake/: armkidd_cvprocesserConfig.cmake
computer_viz/ros2_ws/install/armkidd_interfaces/share/armkidd_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
computer_viz/ros2_ws/install/armkidd_interfaces/share/armkidd_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  armkidd_interfaces__rosidl_typesupport_cExport.cmake  armkidd_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  armkidd_interfaces__rosidl_typesupport_introspection_cExport.cmake  armkidd_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  armkidd_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_armkidd_interfaces__rosidl_generator_cExport.cmake  export_armkidd_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_armkidd_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_armkidd_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
computer_viz/ros2_ws/log/: latest_build
computer_viz/ros2_ws/src/armkidd_cvprocesser/: CMakeLists.txt
computer_viz/ros2_ws/src/armkidd_cvprocesser/armkidd_cvprocesser/: AgentClient.py  cv_processer_node.py
computer_viz/ros2_ws/src/armkidd_interfaces/: CMakeLists.txt  package.xml
dashboard_app/: Dockerfile
dashboard_app/webServer/: commandSenderWS.py  cyclone.xml  imageSenderWS.py  settingsHelper.py  urdfCamEditor.py  webAPIServer.py  webServer_host.py  webSocketServer.py
dashboard_app/webServer/config/: ipAddrConfig.py  load_config.py
dashboard_app/webServer/webChat_server/: WebChatServer.py  WebChatService_pb2_grpc.py
dashboard_app/webServer/webImage_server/: WebImageServer.py  WebImageService.proto  WebImageService_pb2.py  WebImageService_pb2_grpc.py
dashboard_app/webUI/: UIControl.js  index.css  index.html  index.js  nginx.conf  run.sh  styles.css  webAPIClient.js  webSocketClient.js
dashboard_app/webUI/stream/: stream.css  stream.html  stream.js
stt_whisper/: Dockerfile  FileWatcher.py  SoundDev.py  Utilities.py  WhisperInferenceOnnx.py  app.py  er.txt  loadConfig.py  micfinder.py  on_startup.sh
stt_whisper/stt_server/: STTServer.py  STTServiceStream.proto
(+35 files in other folders)
