<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armkidd_command</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lehongnhatminh@outlook.com">alexubuntu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>grasping_msgs</depend>
  <!-- <depend>moveit_core</depend> -->
  <!-- <depend>moveit_ros_planning</depend> -->
  <depend>moveit_ros_planning_interface</depend>
  <!-- <depend>moveit_ros_move_group</depend> -->
  <depend>libserial-dev</depend>
  
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <!-- <exec_depend>armkidd_description</exec_depend> -->
  <exec_depend>armkidd_moveit</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <depend>behaviortree_cpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
